main slider slide align fix

--- a/src/components/components/SlideMain/SlideMain.css
+++ b/src/components/components/SlideMain/SlideMain.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0 150px;
     box-sizing: border-box;
-    display: block;
     width: 100%;
     height: 100vh;
     position: relative;
@@ -110,6 +109,7 @@
             linear-gradient(270deg, transparent 70%, var(--colors_bg_main)),
             radial-gradient(rgb(0, 0, 0, .5), transparent),
             var(--image_url) center / cover no-repeat;
+        justify-content: center;
     }
 
     .slide-main__content-wrapper {
